<resources>
    <string name="app_name">trip-planner-android-client</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyBkpxZaCJxZwpiZuLP8YqLu0KAQkA1nKeU</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="trip_planner_menu_item">Trip Planner</string>

    <string name="scheduled_trips_menu_item">Scheduled Trips</string>

    <string name="action_settings">Settings</string>

    <string name="scheduled_trips">Scheduled Trips</string>

    <string name="where_from">Where from?</string>

    <string name="where_to">Where to?</string>

    <string name="from">From:</string>

    <string name="to">To:</string>

    <string name="date">Date:</string>

    <string name="time">Time:</string>

    <string name="reminder">Reminder:</string>

    <string-array name="reminder_times_array">
        <item>10 minutes before</item>
        <item>20 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
    </string-array>

    <string name="repeat">Repeat on:</string>

    <string name="monday">M</string>

    <string name="tuesday">T</string>

    <string name="wednesday">W</string>

    <string name="thursday">Th</string>

    <string name="friday">F</string>

    <string name="saturday">Sa</string>

    <string name="sunday">Su</string>

    <string name="save">SAVE</string>

    <string name="trip_to">Trip to\u0020</string>

    <string name="from_">from\u0020</string>

    <string name="unknown_location">Unknown location</string>

    <string name="no_next_trip">No next trip</string>

    <string name="no_reminder_set">No reminder set</string>

    <string name="does_not_repeat">Does not repeat</string>

    <string name="search">Search</string>

    <string name="no_results">No results</string>

    <string name="previous_searches">Previous searches</string>

    <string name="loading_results">Loading results&#8230;</string>

    <string name="depart">Depart</string>

    <string name="arrive">Arrive</string>

    <string name="ok">OK</string>

    <string name="cancel">Cancel</string>

    <string name="transit_stop_selected">Transit Stop Selected:</string>



</resources>
