<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:clipToPadding="false"
    android:background="@color/transparent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/trip_to"
                    android:textSize="@dimen/scheduled_trip_list_item_font_small" />

                <TextView
                    android:id="@+id/destination"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/unknown_location"
                    android:textColor="@color/colorDark"
                    android:textSize="@dimen/scheduled_trip_list_item_font_large" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/from_"
                    android:textSize="@dimen/scheduled_trip_list_item_font_small" />

                <TextView
                    android:id="@+id/origin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/unknown_location"
                    android:textColor="@color/colorDark"
                    android:textSize="@dimen/scheduled_trip_list_item_font_large" />
            </LinearLayout>


            <TextView
                android:id="@+id/next_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/no_next_trip"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/scheduled_trip_list_item_font_large" />


            <TextView
                android:id="@+id/reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_reminder_set"
                android:textSize="@dimen/scheduled_trip_list_item_font_small"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/repeats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/does_not_repeat"
                android:textColor="@color/colorDark"
                android:textSize="@dimen/scheduled_trip_list_item_font_large"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clipToPadding="false">

                <ImageButton
                    android:id="@+id/go_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_directions_white_24dp"
                    android:background="@drawable/circle_primary_small"
                    android:elevation="3dp"/>

                <ImageButton
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_toLeftOf="@id/go_button"
                    android:src="@drawable/ic_mode_edit_white_24dp"
                    android:background="@drawable/circle_accent_small"
                    android:elevation="3dp"/>

            </RelativeLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</FrameLayout>